--- a/main.yaml
+++ b/main.yaml
@@ -14,4 +14,4 @@ jobs:
       run:
         echo "${{secrets.DOCKERPASSWORD }}" | docker login -u "${{secrets.DOCKERUSERNAME }}" --password-stdin
         docker image build -t "${{ secrets.DOCKERUSERNAME }}/softeng-lab:latest"
-        docker push "${{ secrets.DOCKERUSERNAME }}/softeng-lab:latest"
+        docker push "${{ secrets.DOCKERUSERNAME }}Pakin49/softeng-lab:latest"
