--- a/main.yaml
+++ b/main.yaml
@@ -7,11 +7,11 @@ on:
 
 jobs:
   build:
-    runs-on: ubunU-latest
+    runs-on: ubuntu-latest
     steps:
-    - uses: action/checkout@v1
-    - name: Bulid & Push Image
-      run:
-        echo "${{secrets.DOCKERPASSWORD }}" | docker login -u "${{secrets.DOCKERUSERNAME }}" --password-stdin
-        docker image build -t "${{ secrets.DOCKERUSERNAME }}/softeng-lab:latest"
-        docker push "${{ secrets.DOCKERUSERNAME }}Pakin49/softeng-lab:latest"
+    - uses: actions/checkout@v1
+    - name: Build & Push Image
+      run: |
+        echo "${{ secrets.DOCKERPASSWORD }}" | docker login -u "${{ secrets.DOCKERUSERNAME }}" --password-stdin
+        docker image build -t "${{ secrets.DOCKERUSERNAME }}/softeng-lab:latest" .  # Added '.' for build context
+        docker push "${{ secrets.DOCKERUSERNAME }}/softeng-lab:latest"
